[package]
name = "rust-solana-backend-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added for json! macro
solana-sdk = "1.18"
spl-token = "3.5.0" # Adjust if test suite specifies a different version
bs58 = "0.5"
base64 = "0.22"
log = "0.4"
env_logger = "0.10"